# Eru

./: .gitignore  CMakeLists.txt  README.md  compile_command.json
documentation/: Tasks  buildTargets  clang-notes  formalGrammar  notes.txt  someBestPractices
documentation/installation-issues/: cmake  gtest
documentation/vm-issues/: clipboardIssues  internet
include/AST/: AST.h  ASTContext.h  ASTTraversal.h  ASTVisitor.h  Assignment.h  CompilationUnit.h  Controlflow.h  Declaration.h  Expression.h  Function.h  PrimaryExpression.h  Statement.h  Top.h  Types.h  VariableDeclaration.h  module.h
include/Analyzer/: Analyzer.h  AnalyzerTypes.h  Expression.h  Function.h  Variable.h
include/Frontend/: Actions.h  BinaryRewriter.h  Compiler.h  Linker.h  Rewriter.h
include/IR/: IRGenerator.h  IRScope.h  ScopeVariable.h
include/Lexer/: Lexer.h  Tokens.h
include/Parser/: Assignment.h  CompilationUnit.h  ControlFlow.h  Directive.h  Expression.h  Function.h  Identifier.h  Literal.h  Parser.h  Statement.h  Type.h  VariableDeclaration.h
include/Parser/Syntax/: Assignment.h  CompilationUnit.h  ControlFlow.h  Directive.h  Expression.h  Function.h  Identifier.h  Literal.h  Statement.h  Syntax.h  Type.h  VariableDeclaration.h
include/Rewriter/: Disassemble.h  Emit.h  Rewriter.h
include/Rewriter/Discover/: Discover.h  Relocations.h  Sections.h  Symbols.h  VirtualAddress.h
include/Support/: Commandline.h  Constants.h  Environment.h  Log.h  Result.h  Scope.h  Templates.h  Triple.h
include/Support/IO/: File.h  FileReader.h
lib/: CMakeLists.txt  Main.cpp  test.cpp
lib/AST/: AST.cpp  Assignment.cpp  CompilationUnit.cpp  Controlflow.cpp  Declaration.cpp  Expression.cpp  Function.cpp  PrimaryExpression.cpp  Statement.cpp  Top.cpp  Types.cpp  VariableDeclaration.cpp
lib/Analyzer/: Analyzer.cpp  Expression.cpp  Function.cpp  Variable.cpp
lib/Driver/: Eru.cpp  Rewriter.cpp  main.cpp
lib/Frontend/: Actions.cpp  BinaryRewriter.cpp  Compiler.cpp  CompilerInstance.cpp  EmitObjectFile.cpp  EmitObjectiveFile.cpp  Linker.cpp  ParseAST.cpp  Rewriter.cpp
lib/IR/: Assignment.cpp  Controlflow.cpp  Expression.cpp  Function.cpp  IRGenerator.cpp  ScopeVariable.cpp  Types.cpp  VariableDeclaration.cpp
lib/Lexer/: Lexer.cpp  Tokens.cpp
lib/Parser/: Assignment.cpp  CompilationUnit.cpp  ControlFlow.cpp  Directive.cpp  Expression.cpp  Function.cpp  Identifier.cpp  Literal.cpp  Parser.cpp  Statement.cpp  Type.cpp  VariableDeclaration.cpp
lib/Parser/Syntax/: Assignment.cpp  CompilationUnit.cpp  ControlFlow.cpp  Directive.cpp  Expression.cpp  Function.cpp  Identifier.cpp  Literal.cpp  Statement.cpp  Type.cpp  VariableDeclaration.cpp
lib/Rewriter/: BinaryRewriter.cpp  Disassemble.cpp  Emit.cpp  ObjectRewriter.cpp  Rewriter.cpp
lib/Rewriter/Discover/: Discover.cpp  Relocations.cpp  Sections.cpp  Symbols.cpp  VirtualAddress.cpp
lib/Support/: Commandline.cpp  Triple.cpp
lib/Support/IO/: File.cpp  FileReader.cpp
test/: CMakeLists.txt
test/lit/: CMakeLists.txt  lit.cfg
test/lit/Ainor/: startup-manually-linked-eru.arda  startup-manually-linked-eru.c
test/lit/Eru/: eru-dummy-main-with-C.c  eru-standalone.c
test/lit/Eru/Expressions/: pointer-dereference-assignment.c  pointer-expressions.c  return-expression.c  string-expression.c
test/lit/Eru/Functions/: call-before-function.c  redeclaring-function.c
test/lit/Rewriter/: Preserve-layout.c  RewriteTest.c
test/lit/basic-examples/: Eru-linked-with-C.c  eru-linked-with-C.c  eru-standalone.c  scope-variable-declaration.c
test/lit/basic-examples/Input/: main.c
test/lit/commandline-args/: input-output-files.c  target-triple.c
test/lit/eru-snippets/: eru-types.c
test/lit/eru-snippets/Expressions/: boolean-expressions.c  function-call-expression.c  if-expressions.c  pointer-arithmatic-expressions.c  pointer-arithmetic-expressions.c  pointer-expressions.c
test/lit/eru-snippets/Expressions/Negative/: mismatching-types.c
test/lit/eru-snippets/Functions/: parameters-function.c  pointer-return-function.c  return-function.c
test/lit/eru-snippets/Variables/: pointers-variable-declaration.c  pointers.c
test/unit/: CMakeLists.txt  test.cpp
test/unit/IR/: CMakeLists.txt  testIRGenerator.cpp
test/unit/Lexer/: CMakeLists.txt  testLexer.cpp
test/unit/Parser/: CMakeLists.txt  testExpressionAnalysis.cpp  testFunctionAnalysis.cpp  testParser.cpp  testParser.h  testVariableAnalysis.cpp
test/unit/Support/: CMakeLists.txt
test/unit/Support/IO/: testFile.cpp  testFileReader.cpp
tools/: CMakeLists.txt
tools/Ainur/: CMakeLists.txt
tools/Ainur/startup/: CMakeLists.txt  startup.c
